--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs: #GitHub Action 中的任务
           #  configuration.
           #  personal_token参数值不要修改，github action 会自动引用
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          external_repository: sshrc/sshrc.github.io
+          external_repository: ohmykevin/ohmykev.github.io
           publish_branch: gh-page
           publish_dir: ./public
           commit_message: ${{github.event.head_commit.message }}
