--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 # Page settings
 
-baseURL = "http://example.org/"
+baseURL = "https://ohmykevin.github.io/resume/"
 languageCode = "en"
 title = ""
 theme = "devresume"
